ar-coupons/dev/model/300.model.deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from":{
            "kind":"ImageStreamTag",
            "name":"dev-arc-model:latest"
          },
          "fieldPath":"spec.template.spec.containers[?(@.name==\"dev-arc-model\")].image"
        }
      ]
  name: dev-arc-model
  labels:
    app: dev-arc-model
    app.kubernetes.io/component: dev-arc-model
    app.kubernetes.io/instance: dev-arc-model
    app.kubernetes.io/part-of: dev-arc
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dev-arc
      deployment: dev-arc-model
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app.kubernetes.io/part-of: dev-arc
        deployment: dev-arc-model
    spec:
      containers:
        - name: dev-arc-model
          image: 'dev-arc-model:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
