ar-coupons/dev/model/500.model.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dev-arc-model
  labels:
    app: dev-arc-model
    app.kubernetes.io/component: dev-arc-model
    app.kubernetes.io/instance: dev-arc-model
    app.kubernetes.io/part-of: dev-arc
    # annotations:
    #   argocd.argoproj.io/sync-wave: "3"
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dev-arc-model
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
